# tgbot-recipes

./: .env.example  .gitignore  bot.py  pyproject.toml  requirements.txt  scheduler.py
migrations/models/: 0_20240709235810_init.py
scheduler/: base.py  tasks.py
systemd/: scheduler.service  tgbot_recipes.service
tgbot/: config.py
tgbot/db/: db.py
tgbot/db/models/: __init__.py  base.py  recipe.py  user.py
tgbot/handlers/: user.py
tgbot/handlers/users/: recipes.py  user.py
tgbot/keyboards/inline/: recipes.py
tgbot/keyboards/reply/: start.py
tgbot/middlewares/: throttling.py  user.py
tgbot/misc/: logger.py
