[tool.poetry]
name = "tgbot-recipes"
version = "0.1.0"
description = ""
authors = ["Timur Kerimov <tim-online@mail.ru>"]
license = "MIT"
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.10.0"
tortoise-orm = { extras = ["asyncpg"], version = "^0.21.4" }
pydantic-settings = "^2.3.4"
apscheduler = "^3.10.4"
apscheduler-di = "^0.1.0"
cachetools = "^5.3.3"
redis = "^5.0.7"
betterlogging = "^1.0.0"
aerich = "^0.7.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
ruff = "^0.5.1"

[tool.aerich]
tortoise_orm = "tgbot.db.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
